# pymagine

./: CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pymagine.rst
pymagine/: colour_filters.py  edge_detection.py  fishbowl_filter.py  tunnel_filter.py  vignette_filter.py
tests/: test_colour_filters.py  test_edge_detection.py  test_pymagine.py  test_tunnel.py  test_vignette.py
