[tool.poetry]
name = "pymagine"
version = "0.1.0"
description = "Python package that allows the user to apply filters to images."
authors = ["Katie Birchard <birchardkatie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scikit-image = "^0.16.2"
scipy = "^1.4.1"
matplotlib = "^3.2.0"
testpypi = "^1.3.0"
opencv-python = "^4.2.0"
Pillow = "^7.0.0"
flake8 = "^3.7.9"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
