[tool.poetry]
name = "pymagine"
version = "0.1.0"
description = "Python package that allows the user to apply filters to images."
authors = ["Katie Birchard <birchardkatie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scikit-image = "^0.16.2"
scipy = "^1.4.1"
matplotlib = "^3.2.0"
testpypi = "^1.3.0"
opencv-python = "^4.2.0"
Pillow = "^7.0.0"
flake8 = "^3.7.9"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_variable = "pymagine/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
