[tool.poetry]
name = "pymagine"
version = "0.1.8"
description = "Python package that allows the user to apply filters to images."
authors = ["Katie Birchard, Sukriti Trehan, Trevor Kwan, Brendon Campbell"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/pymagine"
repository = "https://github.com/UBC-MDS/pymagine"
documentation = 'https://pymagine.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scikit-image = "^0.16.2"
scipy = "^1.4.1"
matplotlib = "^3.2.0"
testpypi = "^1.3.0"
opencv-python = "^4.2.0"
Pillow = "^7.0.0"
flake8 = "^3.7.9"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"
flake8 = "^3.7.9"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
python-semantic-release = "^4.10.0"

[tool.semantic_release]
version_variable = "pymagine/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

